syntax = "proto3";

package NReWrapper;

message TRe2Serialization {
    string Regexp = 1;
    uint64 Flags = 2;
};

message TSerialization {
    oneof Data {
        bytes Hyperscan = 1;
        TRe2Serialization Re2 = 2;
    }
};
